# oxidgb-pico

./: Cargo.toml  README.md  memory.x
.cargo/: config.toml
src/: app.rs  clock.rs  main.rs
