[package]
name = "oxidgb-pico"
version = "0.2.0"
authors = ["Selby <jselby@jselby.net>"]
edition = "2018"
license = "MIT"
description = "A port of OxidGB to the Raspberry Pi Pico"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "0.2.5", features = ["unproven"] }
embedded-time = "0.12"

defmt = "0.3"
defmt-rtt = "0.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }
alloc-cortex-m = "*"

rp-pico = "0.4"

embedded-graphics-core = "0.3.2"
embedded-graphics = "0.7"
profont = "0.6.1"

display-interface-spi = "0.4.1"

st7789 = { git = "https://github.com/almindor/st7789", rev = "e0fd943611afbb502f907198118539a608f51ca1" }

oxidgb_core = {git = "https://github.com/j-selby/oxidgb", rev="caac6cc85e21635f2ba29ac3572871602ba3f371", features = ['heap_alloc'], default-features = false}

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
